# dempp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  ruff.toml
docs/: index.md
notebooks/: compute_dem_of_difference.ipynb
src/dempp/: __init__.py  dod.py  elevation_bands.py  elevation_bands_old.py  filter.py  io.py  math.py  opals_func.py  pdal.py  raster_statistics.py  statistics.py  uncertainty.py  utils.py  xdem_filter.py
src/dempp/opals/: opals_pipeline.py
src/dempp/utils/: __init__.py  dotdict.py  logger.py  paths.py  timer.py
src/pyasp/postproc/: __init__.py  dod.py  elevation_bands.py  filter.py  raster_statistics.py  utils.py
tests/: test_dod.py  test_elevation_bands.py  test_filter.py  test_raster_statistics.py  test_statistics.py
