[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dempp"
version = "0.0.1"
description = "Python package for Ames Stereo Pipeline processing"
readme = "README.md"
authors = [{ name = "Francesco Ioli", email = "francesco.ioli@geo.uzh.ch" }]
maintainers = [
    { name = "Remote sensing of Environmental Changes Group UZH", email = "francesco.ioli@geo.uzh.ch" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["ASP", "DEM", "photogrammetry", "stereo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy<=2.0",
    "matplotlib",
    "pandas",
    "opencv-python",
    "rasterio",
    "pyproj",
    "tqdm",
    "xdem",
    "geoutils",
    "omegaconf",
    "pytransform3d",
    "dask[distributed]",
    "requests",
    "geopandas",
    "shapely",
    "seaborn",
    "graphviz",
]

[project.urls]
Homepage = "https://github.com/RSE-UZH/dempp"
Documentation = "https://github.com/RSE-UZH/dempp/"
Repository = "https://github.com/RSE-UZH/dempp"

[project.optional-dependencies]
asp-plot = ["fiona", "matplotlib-scalebar", "contextily", "markdown-pdf"]

dev = [
    "ruff",
    "bumpver",
    "pip-tools",
    "pytest",
    "pytest-mock",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pre-commit",
    "icecream",
]

[tool.hatch]
version.path = "src/dempp/__init__.py"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = ["tests"]


[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/dempp/__init__.py" = ["{version}"]
